--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   transform: translateY(-50%);
   background-color: white;
   height: 6.5%;
-  right: 10%;
+  right: 1%;
 }
 .something::after {
   content: "";
@@ -17,5 +17,5 @@
   transform: translateY(-50%);
   background-color: white;
   height: 6.5%;
-  left: 50%;
+  left: 1%;
 }
